--- a/q2/src/inference.ipynb
+++ b/q2/src/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 1,
    "id": "bda8cfe0",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "id": "f687dde3",
    "metadata": {},
    "outputs": [],
@@ -39,29 +39,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "id": "cac77364",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(data_csv_path)\n",
-    "movies = pd.read_csv(movies_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "id": "bb1a33bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.sort_values(by=\"timestamp\", inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "0a65c910",
    "metadata": {},
    "outputs": [
     {
@@ -70,48 +49,51 @@
      "text": [
       "59047\n"
      ]
-    }
-   ],
-   "source": [
-    "data, mapping, inverse_mapping = map_column(data, col_name=\"movieId\")\n",
-    "grp_by_train = data.groupby(by=\"userId\")\n",
-    "print(len(mapping))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "id": "6923b93c",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "[130928, 90662, 20846, 39089, 110798, 21897, 133466, 72530, 86431, 111063]"
+       "[40432, 62743, 129131, 41121, 35362, 142929, 44820, 6066, 76589, 54125]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data = pd.read_csv(data_csv_path)\n",
+    "movies = pd.read_csv(movies_path)\n",
+    "\n",
+    "data.sort_values(by=\"timestamp\", inplace=True)\n",
+    "\n",
+    "data, mapping, inverse_mapping = map_column(data, col_name=\"movieId\")\n",
+    "grp_by_train = data.groupby(by=\"userId\")\n",
+    "\n",
     "random.sample(list(grp_by_train.groups), k=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "id": "80c7cc4e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/twh/.local/lib/python3.8/site-packages/torch/nn/modules/transformer.py:282: UserWarning: enable_nested_tensor is True, but self.use_nested_tensor is False because encoder_layer.self_attn.batch_first was not True(use batch_first for better inference performance)\n",
+      "  warnings.warn(f\"enable_nested_tensor is True, but self.use_nested_tensor is False because {why_not_sparsity_fast_path}\")\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +110,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
+   "id": "17ae5807",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62423 62423\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count values in movies[\"genres\"]\n",
+    "print(len(movies.genres.to_list()), len(movies.movieId.to_list()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "997385df",
    "metadata": {},
    "outputs": [],
@@ -138,19 +139,28 @@
     "    for a, b in zip(movies.title.tolist(), movies.movieId.tolist())\n",
     "    if b in mapping\n",
     "}\n",
-    "idx_to_movie = {v: k for k, v in movie_to_idx.items()}\n",
-    "# idx_to_movie = {\n",
-    "#     b: (a, c)\n",
-    "#     for a, b, c in zip(\n",
-    "#         movies.title.tolist(), movies.movieId.tolist(), movies.genres.tolist()\n",
+    "\n",
+    "# movie_to_idx = {\n",
+    "#     a: mapping[b]\n",
+    "#     for a, b, _ in zip(\n",
+    "#         movies.title.tolist(), movies.movieId.tolist(), movies.genres.to_list()\n",
     "#     )\n",
     "#     if b in mapping\n",
-    "# }"
+    "# }\n",
+    "\n",
+    "# idx_to_movie = {v: k for k, v in movie_to_idx.items()}\n",
+    "idx_to_movie = {\n",
+    "    mapping[b]: (a, c)\n",
+    "    for a, b, c in zip(\n",
+    "        movies.title.tolist(), movies.movieId.tolist(), movies.genres.tolist()\n",
+    "    )\n",
+    "    if b in mapping\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 21,
    "id": "5b083cd4",
    "metadata": {},
    "outputs": [],
@@ -168,9 +178,7 @@
     "        prediction = model(src)\n",
     "\n",
     "    masked_pred = prediction[0, -1].numpy()\n",
-    "\n",
     "    sorted_predicted_ids = np.argsort(masked_pred).tolist()[::-1]\n",
-    "\n",
     "    sorted_predicted_ids = [a for a in sorted_predicted_ids if a not in ids]\n",
     "\n",
     "    return [idx_to_movie[a] for a in sorted_predicted_ids[:10] if a in idx_to_movie]"
@@ -186,26 +194,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 22,
    "id": "5dae87be",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Wild Strawberries (Smultronstället) (1957)',\n",
-       " 'Blood Simple (1984)',\n",
-       " 'Double Indemnity (1944)',\n",
-       " 'Yojimbo (1961)',\n",
-       " '8 1/2 (8½) (1963)',\n",
-       " 'Strangers on a Train (1951)',\n",
-       " 'Seventh Seal, The (Sjunde inseglet, Det) (1957)',\n",
-       " 'Serpico (1973)',\n",
-       " 'M (1931)',\n",
-       " 'Conversation, The (1974)']"
+       "[('Ice Age (2002)', 'Adventure|Animation|Children|Comedy'),\n",
+       " ('Harry Potter and the Order of the Phoenix (2007)',\n",
+       "  'Adventure|Drama|Fantasy|IMAX'),\n",
+       " (\"Pirates of the Caribbean: Dead Man's Chest (2006)\",\n",
+       "  'Action|Adventure|Fantasy'),\n",
+       " ('Shrek 2 (2004)', 'Adventure|Animation|Children|Comedy|Musical|Romance'),\n",
+       " ('Harry Potter and the Half-Blood Prince (2009)',\n",
+       "  'Adventure|Fantasy|Mystery|Romance|IMAX'),\n",
+       " ('Star Wars: Episode III - Revenge of the Sith (2005)',\n",
+       "  'Action|Adventure|Sci-Fi'),\n",
+       " ('Avatar (2009)', 'Action|Adventure|Sci-Fi|IMAX'),\n",
+       " ('Up (2009)', 'Adventure|Animation|Children|Drama'),\n",
+       " ('I, Robot (2004)', 'Action|Adventure|Sci-Fi|Thriller'),\n",
+       " ('Bruce Almighty (2003)', 'Comedy|Drama|Fantasy|Romance')]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,26 +244,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 24,
    "id": "96f0c5d3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Wild Strawberries (Smultronstället) (1957)',\n",
-       " 'Blood Simple (1984)',\n",
-       " 'Double Indemnity (1944)',\n",
-       " 'Strangers on a Train (1951)',\n",
-       " '8 1/2 (8½) (1963)',\n",
-       " 'Yojimbo (1961)',\n",
-       " 'M (1931)',\n",
-       " 'Seventh Seal, The (Sjunde inseglet, Det) (1957)',\n",
-       " 'Notorious (1946)',\n",
-       " 'Key Largo (1948)']"
+       "[('Deadpool 2 (2018)', 'Action|Comedy|Sci-Fi'),\n",
+       " ('X-Men Origins: Wolverine (2009)', 'Action|Sci-Fi|Thriller'),\n",
+       " ('Thor: Ragnarok (2017)', 'Action|Adventure|Sci-Fi'),\n",
+       " (\"Pirates of the Caribbean: Dead Man's Chest (2006)\",\n",
+       "  'Action|Adventure|Fantasy'),\n",
+       " ('Doctor Strange (2016)', 'Action|Adventure|Sci-Fi'),\n",
+       " ('Spider-Man 2 (2004)', 'Action|Adventure|Sci-Fi|IMAX'),\n",
+       " ('I, Robot (2004)', 'Action|Adventure|Sci-Fi|Thriller'),\n",
+       " ('Guardians of the Galaxy 2 (2017)', 'Action|Adventure|Sci-Fi'),\n",
+       " ('X2: X-Men United (2003)', 'Action|Adventure|Sci-Fi|Thriller'),\n",
+       " ('Matrix Reloaded, The (2003)', 'Action|Adventure|Sci-Fi|Thriller|IMAX')]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +277,7 @@
     "    \"Logan (2017)\",\n",
     "    \"Spider-Man (2002)\",\n",
     "    \"Spider-Man 3 (2007)\",\n",
-    "    # \"Spider-Man: Far from Home (2019)\",\n",
+    "    \"Spider-Man: Far from Home (2019)\",\n",
     "]\n",
     "\n",
     "top_movie = predict(list_movies, model, movie_to_idx, idx_to_movie)\n",
@@ -281,26 +294,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 25,
    "id": "b3f01cbc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Wild Strawberries (Smultronstället) (1957)',\n",
-       " 'Blood Simple (1984)',\n",
-       " 'Double Indemnity (1944)',\n",
-       " 'Yojimbo (1961)',\n",
-       " '8 1/2 (8½) (1963)',\n",
-       " 'Seventh Seal, The (Sjunde inseglet, Det) (1957)',\n",
-       " 'Strangers on a Train (1951)',\n",
-       " 'M (1931)',\n",
-       " 'Serpico (1973)',\n",
-       " 'Persona (1966)']"
+       "[('Toy Story (1995)', 'Adventure|Animation|Children|Comedy|Fantasy'),\n",
+       " ('Aladdin (1992)', 'Adventure|Animation|Children|Comedy|Musical'),\n",
+       " ('Monsters, Inc. (2001)', 'Adventure|Animation|Children|Comedy|Fantasy'),\n",
+       " ('Clueless (1995)', 'Comedy|Romance'),\n",
+       " ('Mean Girls (2004)', 'Comedy'),\n",
+       " ('Toy Story 2 (1999)', 'Adventure|Animation|Children|Comedy|Fantasy'),\n",
+       " ('Forrest Gump (1994)', 'Comedy|Drama|Romance|War'),\n",
+       " (\"Bug's Life, A (1998)\", 'Adventure|Animation|Children|Comedy'),\n",
+       " (\"Ferris Bueller's Day Off (1986)\", 'Comedy'),\n",
+       " ('Breakfast Club, The (1985)', 'Comedy|Drama')]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +322,7 @@
     "list_movies = [\n",
     "    \"Zootopia (2016)\",\n",
     "    \"Toy Story 3 (2010)\",\n",
-    "    # \"Toy Story 4 (2019)\",\n",
+    "    \"Toy Story 4 (2019)\",\n",
     "    \"Finding Nemo (2003)\",\n",
     "    \"Ratatouille (2007)\",\n",
     "    \"The Lego Movie (2014)\",\n",
